--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                 </div>
 
 
-                <div class="m-testing">
+                <!-- <div class="m-testing">
                     <div class="img-logo">
                         <div>
                             <img src="asset/link-2.png" alt="">
@@ -590,7 +590,7 @@
                         <p>Seamlessly transform your long URLs into concise and shareable links with just few clicks.
                         </p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="M-El-Re">
                     <img src="asset/Ellipse101.png" alt="">
